@@ -1,0 +1,13 @@
+Dear Dr. <%= @preceptor.last_name %>,<br />
+<br />
+<%= @applicant.name %> has recently submitted an application to the Training Program in Sleep, Circadian, and Respiratory Neurobiology. <span style="text-decoration: underline">This candidate named you as a potential preceptor.</span>
+<% preceptors = [(@applicant.preferred_preceptor_two ? @applicant.preferred_preceptor_two.name : nil), (@applicant.preferred_preceptor_three ? @applicant.preferred_preceptor_three.name : nil)].compact.uniq %>
+<% if preceptors.size > 0 %>
+ The other preferred preceptors that this candidate requested are: <%= preceptors.join(', ') %><br />
+<% end %>
+<br />
+This candidate's CV is attached to this email.  To email the candidate, hit "reply".<br />
+<br />
+<%= simple_format TG_NOTIFY_PRECEPTOR_BODY %><br />
+<br />
+[This email was automatically generated by the <%= DEFAULT_APP_NAME %> System Mailer.]
