@@ -1,0 +1,14 @@
+Dear Dr. <%= @preceptor.last_name %>,
+
+<%= @applicant.name %> has recently submitted an application to the Training Program in Sleep, Circadian, and Respiratory Neurobiology. This candidate named you as a potential preceptor.
+<% preceptors = [(@applicant.preferred_preceptor_two ? @applicant.preferred_preceptor_two.name : nil), (@applicant.preferred_preceptor_three ? @applicant.preferred_preceptor_three.name : nil)].compact.uniq %>
+<% if preceptors.size > 0 %>
+
+The other preferred preceptors that this candidate requested are: <%= preceptors.join(', ') %>
+<% end %>
+
+This candidate's CV is attached to this email.  To email the candidate, hit "reply".
+
+<%== TG_NOTIFY_PRECEPTOR_BODY %>
+
+[This email was automatically generated by the <%= DEFAULT_APP_NAME %> System Mailer.]
