@@ -2,3 +2,5 @@
 
 TG_ADMIN_EMAIL = ""
 TG_ADMIN_ADDRESS = ""
+
+TG_NOTIFY_PRECEPTOR_BODY = ""
