@@ -6,6 +6,7 @@
   * Submission date can now be modified by administrators on applicant page
   * Administrators can view different time ranges for reports on dashboard
   * Annual information can be filtered and exported to CSV
+  * Preferred preceptors now get emailed when an applicant submits their application
   * Previous Institutions has been merged with Degrees Earned
   * Minor layout changes
 
